[gd_scene load_steps=20 format=3 uid="uid://c0br65xw5ls7u"]

[ext_resource type="Script" path="res://Scenes/Characters/Autumn/Autumn.gd" id="1_vo3u4"]
[ext_resource type="Texture2D" uid="uid://08ywwfq0uehq" path="res://Assets/Spritesheets/Characters/AutumnSakilera/SpriteSheet3 (Primary).png" id="2_k7xpo"]
[ext_resource type="AnimationLibrary" uid="uid://btlg3xumocprk" path="res://Assets/Spritesheets/Characters/AnimPlayer2.0.res" id="3_6gg2n"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://ce3jws0105swk" path="res://Assets/Spritesheets/Characters/AutumnSakilera/AnimeTree.tres" id="4_pdpgd"]
[ext_resource type="PackedScene" uid="uid://ctunnlraviocb" path="res://Scenes/UI/StatBars/healthbar.tscn" id="5_03c1f"]
[ext_resource type="PackedScene" uid="uid://cqtu20alqlysd" path="res://Scenes/UI/Inventory/inventory.tscn" id="5_4kese"]
[ext_resource type="PackedScene" uid="uid://cqpdjw2ewl454" path="res://Scenes/UI/StatBars/staminabar.tscn" id="6_ri2bu"]
[ext_resource type="PackedScene" uid="uid://dji0a3xg8uma8" path="res://Scenes/UI/StatBars/manabar.tscn" id="7_7cnkd"]
[ext_resource type="Script" path="res://Scenes/BehaviorTree/Base/BTreeBase.gd" id="8_7d4p6"]
[ext_resource type="Script" path="res://Scenes/UI/StatBars/manabar.gd" id="8_eooqb"]
[ext_resource type="Script" path="res://Scenes/BehaviorTree/Composite/CompositeTree.gd" id="9_17y0m"]
[ext_resource type="Script" path="res://Scenes/Characters/Autumn/Actions/FollowTamaAction.gd" id="10_uvnt3"]
[ext_resource type="Script" path="res://Scenes/Characters/Autumn/Actions/VoidBoltAction.gd" id="12_td2he"]
[ext_resource type="Script" path="res://Scenes/Characters/Autumn/Actions/ExploreArea.gd" id="15_sorcu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1cxy"]
size = Vector2(8.33332, 5.55556)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5uga1"]
radius = 7.77778
height = 42.2222

[sub_resource type="CircleShape2D" id="CircleShape2D_jj3f3"]
radius = 60.0

[sub_resource type="Animation" id="Animation_bpuxi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [85]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyx7m"]
_data = {
"RESET": SubResource("Animation_bpuxi")
}

[node name="Autumn" type="CharacterBody2D" node_paths=PackedStringArray("NavAgent") groups=["Adventurer", "Autumn", "player"]]
y_sort_enabled = true
scale = Vector2(0.9, 0.9)
collision_mask = 9
input_pickable = true
script = ExtResource("1_vo3u4")
NavAgent = NodePath("NavigationAgent2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_k7xpo")
flip_h = true
hframes = 14
vframes = 13
frame = 85

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_s1cxy")

[node name="Areas" type="Node2D" parent="." groups=["AutumnAreas"]]

[node name="InteractBox" type="Area2D" parent="Areas" groups=["AutumnInteractBox"]]
collision_layer = 516
collision_mask = 516

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/InteractBox"]
position = Vector2(-1.11111, 5.55556)
shape = SubResource("CapsuleShape2D_5uga1")

[node name="Detectbox" type="Area2D" parent="Areas"]
visible = false
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Detectbox"]
shape = SubResource("CircleShape2D_jj3f3")

[node name="Animations" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nyx7m"),
"AnimPlayer2.0": ExtResource("3_6gg2n")
}

[node name="AnimationTree" type="AnimationTree" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nyx7m"),
"AnimPlayer2.0": ExtResource("3_6gg2n")
}
tree_root = ExtResource("4_pdpgd")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/Idle = false
parameters/conditions/VoidBolt = false
parameters/conditions/Walking = false
parameters/Idle/blend_position = Vector2(-0.0120001, 0.622302)
parameters/VoidBolt/blend_position = Vector2(0, 0.150794)
parameters/Walking/blend_position = Vector2(0, 0)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 30.0
path_postprocessing = 1

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="Timers" type="Node" parent="."]

[node name="RegenerationTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="MoodTimer" type="Timer" parent="Timers"]
wait_time = 200.0
autostart = true

[node name="NavTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="CombatTimer" type="Timer" parent="Timers"]

[node name="Healthbar" parent="." node_paths=PackedStringArray("user") instance=ExtResource("5_03c1f")]
z_index = 2
custom_minimum_size = Vector2(50, 10)
offset_left = -25.5556
offset_top = -50.0
offset_right = 24.4444
offset_bottom = -40.0
show_percentage = false
user = NodePath("..")

[node name="Staminabar" parent="." node_paths=PackedStringArray("user") instance=ExtResource("6_ri2bu")]
z_index = 2
custom_minimum_size = Vector2(50, 10)
offset_left = -25.5556
offset_top = -39.3333
offset_right = 24.4444
offset_bottom = -29.3333
show_percentage = false
user = NodePath("..")

[node name="ManaBar" parent="." node_paths=PackedStringArray("user") instance=ExtResource("7_7cnkd")]
z_index = 2
custom_minimum_size = Vector2(50, 10)
offset_left = -25.5556
offset_top = -28.6666
offset_right = 24.4444
offset_bottom = -18.6666
show_percentage = false
script = ExtResource("8_eooqb")
user = NodePath("..")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Inventory" parent="UI" node_paths=PackedStringArray("player") instance=ExtResource("5_4kese")]
process_mode = 3
visible = false
mouse_filter = 1
player = NodePath("../..")

[node name="BTreeBase" type="Node" parent="." node_paths=PackedStringArray("Character")]
script = ExtResource("8_7d4p6")
Character = NodePath("..")

[node name="Combat" type="Node" parent="BTreeBase" node_paths=PackedStringArray("Character")]
script = ExtResource("9_17y0m")
Character = NodePath("../..")

[node name="VoidBoltAction" type="Node" parent="BTreeBase/Combat" node_paths=PackedStringArray("Character")]
script = ExtResource("12_td2he")
Character = NodePath("../../..")

[node name="Move" type="Node" parent="BTreeBase" node_paths=PackedStringArray("Character")]
script = ExtResource("9_17y0m")
Character = NodePath("../..")

[node name="FollowTama" type="Node" parent="BTreeBase/Move" node_paths=PackedStringArray("NavAgent", "Character")]
script = ExtResource("10_uvnt3")
NavAgent = NodePath("../../../NavigationAgent2D")
Character = NodePath("../../..")

[node name="FindEnemy" type="Node" parent="BTreeBase/Move" node_paths=PackedStringArray("NavAgent", "Character")]
script = ExtResource("15_sorcu")
NavAgent = NodePath("../../../NavigationAgent2D")
Character = NodePath("../../..")

[connection signal="mouse_entered" from="Areas/InteractBox" to="." method="MouseOn"]
[connection signal="mouse_exited" from="Areas/InteractBox" to="." method="MouseOff"]
[connection signal="area_entered" from="Areas/Detectbox" to="." method="FindItems"]
[connection signal="timeout" from="Timers/RegenerationTimer" to="." method="RegenerationTimeout"]
[connection signal="timeout" from="Timers/MoodTimer" to="." method="MoodTimeout"]
[connection signal="timeout" from="Timers/NavTimer" to="." method="MakePath"]
